# ha_cam

./: .gitignore  16m.csv  CMakeLists.txt  README.md  sdkconfig.defaults
components/Camera/: CMakeLists.txt  Camera.c  vCenter.c
components/Camera/include/: Camera.h  cam_info.h  camera_pins.h  list.h  vCenter.h
components/ChipInfo/: CMakeLists.txt  ChipInfo.c
components/ChipInfo/include/: ChipInfo.h
components/EasyRTSPServer/: CMakeLists.txt  EasyRTSPServer.c  rjpeg.c
components/EasyRTSPServer/include/: EasyRTSPServer.h  rjpeg.h
components/Mic/: CMakeLists.txt  Mic.c  g711_pcm_convert.c
components/Mic/include/: Mic.h  g711_pcm_convert.h
components/MotionDetect/: CMakeLists.txt  MotionDetect.c
components/MotionDetect/include/: MotionDetect.h
components/Utils/: CMakeLists.txt  Utils.c
components/Utils/include/: Utils.h
components/WebServer/: CMakeLists.txt  WebServer.c  files.html  index.html  ota.html  web_index_html.c
components/WebServer/include/: WebServer.h
components/ha_mqtt_client/: CMakeLists.txt  ha_mqtt_client.c
components/ha_mqtt_client/include/: ha_mqtt_client.h
components/paramCenter/: CMakeLists.txt  paramCenter.c  paramModel.c
components/paramCenter/include/: paramCenter.h  paramCommon.h  paramModel.h
components/storage/: CMakeLists.txt  avi.c  storage.c  utilsFS.c
components/storage/include/: avi.h  storage.h  utilsFS.h
main/: CMakeLists.txt  app_main.c  idf_component.yml  index.html  station_example_main.c
